.gitignore is now working

--- a/WeatherApplicationDesign/WeatherApplicationDesign.csproj
+++ b/WeatherApplicationDesign/WeatherApplicationDesign.csproj
@@ -114,6 +114,21 @@
   <ItemGroup>
     <Content Include="Images\back.jpg" />
     <Content Include="Images\blur.jpg" />
+    <Content Include="Images\Clouds-Back.jpeg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Rain-Back.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Snow-Back.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\snow.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Sun-Back.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\sunshine.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
