--- a/WeatherApplicationDesign/WeatherApplicationDesign.csproj
+++ b/WeatherApplicationDesign/WeatherApplicationDesign.csproj
@@ -66,11 +66,10 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
-    <Compile Include="Language.cs" />
+    <Compile Include="Models\Language.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="SimpleEvent.cs" />
+    <Compile Include="Models\Settings.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,9 +92,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="hu_lang.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="langs\custom_lang.json" />
+    <None Include="langs\eng_lang.json" />
+    <None Include="langs\hu_lang.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
