--- a/WeatherApplicationDesign/WeatherApplicationDesign.csproj
+++ b/WeatherApplicationDesign/WeatherApplicationDesign.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Settings.cs" />
+    <Compile Include="SimpleEvent.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
